# TriGl

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/Helper/: GLVA.cpp  GLVA.h
src/shaders/: fragment.glsl  vertex.glsl
src/util/: Texture.cpp  Texture.h  Transformer.h
